# jupyter

./: docker-compose.yml
__k8s__scripts/: deployment.yaml
jupyterhub/: Dockerfile  jupyterhub_config.py  jupyterhub_cookie_secret  values.yaml
jupyterlab/: Dockerfile  jupyterhub.sqlite  pyproject.toml
k8s/: clusterrole.yaml  configmap-jhub.yaml  hub-deployment.yaml  hub-pvc.yaml  hub-service.yaml  jhub-ingress.yaml  jupyterhub-config.yaml  proxy-public-service.yaml  rbac-jhub-pvc.yaml  serviceaccount.yaml  storageclass.yaml  user-storage.yaml
