[tool.poetry]
name = "jupyter-environment"
version = "0.1.0"
description = "Jupyter environment with data science packages"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.6"
notebook = "^7.3.3"
pandas = "^2.2.3"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"